--- a/bricks/scaffolding/brick.yaml
+++ b/bricks/scaffolding/brick.yaml
@@ -1,6 +1,7 @@
 name: scaffolding
 description: Scaffolding a flutter app with bloc, data/domain/presentation clean separation and optionally code tests/homepage
 version: 0.0.1
+repository: https://github.com/sjhorn/mason_bricks/tree/main/bricks/scaffolding
 
 environment:
   mason: ">=0.1.0-dev.39 <0.1.0"
