--- a/bricks/scaffolding_home/brick.yaml
+++ b/bricks/scaffolding_home/brick.yaml
@@ -1,6 +1,7 @@
 name: scaffolding_home
 description: Scaffolding a flutter app to list the generated features, this depends on the scaffolding brick
 version: 0.0.1
+repository: https://github.com/sjhorn/mason_bricks/tree/main/bricks/scaffolding_home
 
 environment:
   mason: ">=0.1.0-dev.39 <0.1.0"
