--- a/bricks/scaffolding_home/brick.yaml
+++ b/bricks/scaffolding_home/brick.yaml
@@ -1,18 +1,16 @@
 name: scaffolding_home
 description: Scaffolding a flutter app to list the generated features, this depends on the scaffolding brick
-version: 0.0.5
+version: 0.1.0
 repository: https://github.com/sjhorn/mason_bricks/tree/main/bricks/scaffolding_home
-
-environment:
-  mason: ">=0.1.0-dev.39 <0.1.0"
-
-vars:
-  package:
+environment: 
+  mason: '>=0.1.0-dev.39 <0.1.0'
+vars: 
+  package: 
     type: string
     description: Package name
     default: scaffolding_sample
     prompt: What is the package name of your flutter project?
-  features:
+  features: 
     type: string
     description: Feature name(s)
     default: feature1
